# ansible-f5os

./: .dockerignore  .gitlab-ci.yml  AGENTS.md  Dockerfile.validation  Makefile  README.md  ROADMAP.md  bootstrap.yml  f5os-credential-config.yaml  network.yml  observability.yml  pyproject.toml  qos.yml  software_lifecycle.yml  tenants.yml
docs/: awx-operating-model.md  bootstrap-handoff.md  bootstrap.md  f5os-to-bigip-ha-onboarding.md  index.md  inventory-model.md  network.md  observability.md  platform-model.md  playbook-structure.md  qos.md  software_lifecycle.md  system.md  tenant-lifecycle.md  tenants.md  validation.md  var-layout.md
examples/inventory/: hosts.yml
filter_plugins/: f5os_var_filters.py
filter_plugins/f5os_filters/: __init__.py  common.py  fragments.py  settings.py  tenant_ha.py
playbooks/: bootstrap.yml  network.yml  observability.yml  qos.yml  software_lifecycle.yml  system.yml  tenants.yml
playbooks/bootstrap/: prep.yml
playbooks/bootstrap/prep/: build-runtime.yml  load-vars.yml
playbooks/bootstrap/tasks/: apply.yml  audit.yml  delete.yml  manage.yml
playbooks/network/: prep.yml
playbooks/network/prep/: build-runtime.yml  load-vars.yml
playbooks/observability/: prep.yml
playbooks/qos/: prep.yml
playbooks/software_lifecycle/: prep.yml
playbooks/system/: prep.yml
playbooks/tenants/: prep.yml
tests/: test_filter_helpers.py  test_validate_cli.py
tools/: __init__.py  drift-check.py  import-from-f5os.py  validate-vars.py
tools/f5os_tools/: __init__.py  cli.py  models.py  runtime.py  specs.py
vars/: common.yml
(+125 files in other folders)
